--- a/api-reference/ask/ask-for-file.mdx
+++ b/api-reference/ask/ask-for-file.mdx
@@ -42,7 +42,7 @@ import chainlit as cl
 
 @cl.on_chat_start
 async def start():
-    file = None
+    files = None
 
     # Wait for the user to upload a file
     while files == None:
