add integration doc

--- a/overview.mdx
+++ b/overview.mdx
@@ -4,8 +4,13 @@ title: "Overview"
 
 Chainlit is an open-source Python package that makes it incredibly fast to build and share LLM apps. Integrate the Chainlit API in your existing code to spawn a ChatGPT-like interface in minutes!
 
-<Frame caption="Demo of the image gen app available in the chainlit cookbook repo.">
-  <img src="/images/overview.gif" />
+<Frame caption="Build LLM apps with Chainlit">
+  <video
+    controls
+    autoplay
+    loop
+    src="https://github.com/Chainlit/chainlit/assets/13104895/e347e52c-35b2-4c35-8a88-f8ac02dd198e"
+  />
 </Frame>
 
 ## Key features
@@ -25,11 +30,19 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 Chainlit is compatible with all Python programs and libraries. That being said, it comes with a set of integrations with popular libraries and frameworks.
 
 <CardGroup cols={2}>
-  <Card title="LangChain Integration" icon="link" href="/langchain">
+  <Card title="LangChain Integration" icon="link" href="/integrations/langchain">
     Learn how to use any LangChain agent with Chainlit.
   </Card>
 
-  <Card title="LangChain MRKL with Chainlit" icon="link" href="/examples/mrkl">
-    Learn how to turn the LangChain miracle (MRKL) agent into an Chainlit app.
+<Card
+  title="Llama Index Integration"
+  icon="link"
+  href="/integrations/llama-index"
+>
+  Learn how to integrate your Llama Index code with Chainlit.
+</Card>
+
+  <Card title="Langflow Integration" icon="link" href="/integrations/langflow">
+    Learn how to integrate your Langflow agent with Chainlit.
   </Card>
 </CardGroup>
