--- a/installation.mdx
+++ b/installation.mdx
@@ -27,6 +27,6 @@ This should spawn the chainlit UI and ask for your name like so:
   Learn on how to use Chainlit with any python code.
 </Card>
 
-<Card title="With LangChain" icon="link" href="/langchain">
-  Learn on how to use Chainlit with LangChain.
+<Card title="Integrations" icon="link" href="/integrations">
+  Integrate Chainlit with other frameworks.
 </Card>
