rename langchain callback handler

--- a/api-reference/langchain/langchain-run.mdx
+++ b/api-reference/langchain/langchain-run.mdx
@@ -33,7 +33,7 @@ def main():
 
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await agent.acall(input_str, callbacks=[cl.AsyncChainlitCallbackHandler()])
+    res = await agent.acall(input_str, callbacks=[cl.AsyncLangchainCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
@@ -55,7 +55,7 @@ def main():
 
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await cl.make_async(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    res = await cl.make_async(agent)(input_str, callbacks=[cl.LangchainCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
