--- a/api-reference/langchain/callbacks.mdx
+++ b/api-reference/langchain/callbacks.mdx
@@ -16,7 +16,7 @@ The following code example demonstrates how to pass an asynchronous callback han
 ```python
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await agent.acall(input_str, callbacks=[cl.AsyncChainlitCallbackHandler()])
+    res = await agent.acall(input_str, callbacks=[cl.AsyncLangchainCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
@@ -29,7 +29,7 @@ Alternatively, you can pass a synchronous callback handler, as shown in the exam
 ```python
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await cl.make_async(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    res = await cl.make_async(agent)(input_str, callbacks=[cl.LangchainCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
