--- a/api-reference/make-async.mdx
+++ b/api-reference/make-async.mdx
@@ -41,6 +41,6 @@ import chainlit as cl
 
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await cl.make_async(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    res = await cl.make_async(agent)(input_str, callbacks=[cl.LangchainCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
