update cloud doc

--- a/api-reference/ask/ask-for-input.mdx
+++ b/api-reference/ask/ask-for-input.mdx
@@ -12,8 +12,8 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   The content of the message.
 </ParamField>
 <ParamField path="author" type="str" optional>
-  The author of the message, defaults to the chatbot name. See [Chainlit
-  config](/cloud/config).
+  The author of the message, defaults to the chatbot name defined in your
+  config.
 </ParamField>
 <ParamField path="timeout" type="int" optional>
   The number of seconds to wait for an answer before raising a TimeoutError.
