--- a/api-reference/message.mdx
+++ b/api-reference/message.mdx
@@ -10,8 +10,8 @@ The `Message` class is designed to send, stream, edit or remove messages in the 
   The content of the message.
 </ParamField>
 <ParamField path="author" type="str" optional>
-  The author of the message, defaults to the chatbot name. See [Chainlit
-  config](/cloud/config).
+  The author of the message, defaults to the chatbot name defined in your config
+  file.
 </ParamField>
 <ParamField path="elements" type="Element[]" optional>
   The list of elements scoped to this message.
