--- a/cloud/persistence/custom.mdx
+++ b/cloud/persistence/custom.mdx
@@ -2,49 +2,62 @@
 title: Custom
 ---
 
-If your organization can't utilize cloud services for data hosting, you can use the custom persistence mode.
-
-<Note>
-  Authentication and roles are not yet supported with the custom persistence
-  mode.
-</Note>
+If your organization can't use third party cloud services for data hosting, you can use the custom persistence mode.
 
 ## Enable Custom Persistence
 
-Update your [config](/cloud/config) file:
+Update your config file:
 
 ```toml
 [project]
 database = "custom"
 ```
 
-## Define your Custom Client
+## Authentication
 
-To use custom persistence, create your own `Client` that extends the [BaseClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/base.py) class. For reference, check the [CloudClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/cloud.py) and [LocalClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/local.py) implementations.
+`Custom` mode supports authentication but does not require it.
 
-Finally, modify your Chainlit app code to include the `client_factory` and provide your custom client.
+The `BaseDBClient` class (which your custom client will extends) has a `user_infos` attribute.
 
 ```py
-from typing import List, Literal, Dict
+
+class UserDict(TypedDict):
+    id: Optional[int]
+    name: Optional[str]
+    email: Optional[str]
+    role: str
+
+
+class BaseDBClient():
+    user_infos: Optional[UserDict] = None
+```
+
+If authentication is enabled `user_infos` will be available. If not, it will be `None`.
+
+## Define your Custom Client
+
+To use custom persistence, create your own `Client` that extends the [BaseDBClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/base.py) class. For reference, check the [CloudDBClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/cloud.py) and [LocalDBClient](https://github.com/Chainlit/chainlit/blob/main/src/chainlit/client/local.py) implementations.
+
+Finally, modify your Chainlit app code to add a `client_factory` and provide your custom client.
+
+```py
+from typing import Literal, List, Dict
 
 import chainlit as cl
 from chainlit.client.base import (
-    BaseClient,
-    UserDict,
+    BaseDBClient,
     ConversationDict,
     Pagination,
     ConversationFilter,
     PaginatedResponse,
     MessageDict,
     ElementDict,
+    UserDict,
 )
 
 
-class CustomClient(BaseClient):
-    async def is_project_member(self, access_token: str) -> bool:
-        raise NotImplementedError
-
-    async def get_member_role(self, access_token: str) -> str:
+class CustomClient(BaseDBClient):
+    async def create_user(self, variables: UserDict) -> bool:
         raise NotImplementedError
 
     async def get_project_members(self) -> List[UserDict]:
@@ -92,7 +105,7 @@ class CustomClient(BaseClient):
 
 
 @cl.client_factory
-async def client_factory():
+async def client_factory(user_infos):
     return CustomClient()
 
 
