--- a/concepts/env-variables.mdx
+++ b/concepts/env-variables.mdx
@@ -14,7 +14,7 @@ PINECONE_API_KEY=...
 ## Public Apps & Environment Variables
 
 If you want to share your app to a broader audience, you should not put your own OpenAI API keys in the `.env` file.
-Instead, you should use [user_env](/cloud/config) in the Chainlit config to ask each user to provide their own keys.
+Instead, you should use `user_env` in the Chainlit config to ask each user to provide their own keys.
 
 You can then access the user's keys in your code using:
 
@@ -26,7 +26,7 @@ user_env = user_session.get("env")
 
 ## LangChain Example
 
-Let's say you added `OPENAI_API_KEY` in [user_env](/cloud/config).
+Let's say you added `OPENAI_API_KEY` in `user_env`.
 
 ```python
 import chainlit as cl
