--- a/overview.mdx
+++ b/overview.mdx
@@ -21,7 +21,7 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 
 3. [Iterate on prompts:](/concepts/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
 
-4. [Collaborate with teammates:](/cloud/create-project) Invite your teammates, create annotated datasets and run experiments together
+4. [Collaborate with teammates:](/cloud/authentication) Invite your teammates, create annotated datasets and run experiments together
 
 5. [Share your app:](/cloud/deploy) Publish your LLM app and share it with the world (coming soon)
 
