--- a/api-reference/elements/tasklist.mdx
+++ b/api-reference/elements/tasklist.mdx
@@ -34,6 +34,10 @@ async def main():
     task2 = cl.Task(title="Performing calculations")
     await task_list.add_task(task2)
 
+    # Optional: link a message to each task to allow task navigation in the chat history
+    message_id = await cl.Message(content="Started processing data").send()
+    task1.forId = message_id
+
     # Update the task list in the interface
     await task_list.send()
 
