--- a/api-reference/elements/tasklist.mdx
+++ b/api-reference/elements/tasklist.mdx
@@ -51,3 +51,12 @@ async def main():
     await task_list.send()
     
 ```
+
+<Frame caption="Task List in action">
+  <video
+    controls
+    autoplay
+    loop
+    src="https://user-images.githubusercontent.com/13104895/251525854-57d1d9af-62a0-4f67-a530-1f0a3fc93488.mp4"
+  />
+</Frame>
