--- a/cloud/authentication.mdx
+++ b/cloud/authentication.mdx
@@ -34,8 +34,7 @@ id = "your-project-id"
 ```
 
 <Note>
-  If your project or organization has unique authentication requirements, please
-  reach out to us on Discord for assistance.
+  If your project requires enterprise support, company authentication or admin panels, contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.
 </Note>
 
 Once these changes are made and your application is restarted, users will be required to authenticate and be a part of your project before they can access your application.
