--- a/cloud/deploy.mdx
+++ b/cloud/deploy.mdx
@@ -2,7 +2,7 @@
 title: Deployment
 ---
 
-<Note>Coming soon!</Note>
+<Note>Coming soon! Contact us here for enterprise support https://forms.gle/uyKyZmmpVET95Wbx8 </Note>
 
 ## Self-host
 
